@@ -1,4 +1,5 @@
 1.3.0.?
+    - bug 570: -t0 wasn't deleting records
     - use configuration file for options similar to Microsoft's DNS client
     - follow NS records when primary SOA update fails
     - bug 484: detect the authoritative domain name by doing an SOA query
